--- a/resume.html
+++ b/resume.html
@@ -17,6 +17,7 @@
     <header>
         <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo">
+
             </a>
 
             <div class="col-md-8">
@@ -52,17 +53,7 @@
 
         </div>
     </header>
-    <section class="container-fluid">
-        <div class="row row-table">
-            <div class="col-md-8 bg-color-three-reasons section-column">
-                <div class="row">
-                    <div class="col">
-                        <h3 class="section-heading uppercase">About Me</h3>  
-                    </div>
-                </div>
-            </div>
-
-        </div>
+    <section>
 
     </section>
     <footer class="container-fluid">
